--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
     "surge": "^0.19.0",
-      
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
   },
@@ -51,8 +50,11 @@
     "lodash.debounce": "^4.0.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "homepage": "https://github.com/dartmouth-cs52-17S/starterpack-Pspanky#readme"
 }
