--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "SET WEBPACK_ENV=production & webpack --colors",
     "clean": "rimraf public/build",
     "deploy": "npm run build & gh-pages -d public & npm run clean",
-    "surge": "npm run build; surge -p public -d paulspangfort-sa5.surge.sh; npm run clean"
+    "surge": "npm run build & surge -p public -d paulspangfort-lab4.surge.sh & npm run clean"
   },
   "repository": {
     "type": "git",
@@ -48,13 +48,15 @@
     "axios": "^0.16.1",
     "jquery": "^3.2.1",
     "lodash.debounce": "^4.0.8",
+    "marked": "^0.3.6",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "thunk": "0.0.1"
   },
   "homepage": "https://github.com/dartmouth-cs52-17S/starterpack-Pspanky#readme"
 }
